Fixed nav and footer theme

--- a/leighfisher_app/templates/about.html
+++ b/leighfisher_app/templates/about.html
@@ -55,18 +55,18 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Our Hardowrking Team</p>
+          <p>Our Hardworking Team</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/team/team-1.jpg' %}" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="{% static 'assets/img/Sajan.PNG' %}" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat</p>
+                <h4>Sajan </h4>
+                <span>Co-Founder</span>
+                <!-- <p>Explicabo voluptatem mollitia et repellat</p> -->
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -79,11 +79,11 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/team/team-2.jpg' %}" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="{% static 'assets/img/Lijo.PNG' %}" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis</p>
+                <h4>Lijo</h4>
+                <span>Co-Founder</span>
+                <!-- <p>Aut maiores voluptates amet et quis</p> -->
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -96,11 +96,11 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="{% static 'assets/img/team/team-3.jpg' %}" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="{% static 'assets/img/Hari.PNG' %}" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti</p>
+                <h4>Hari</h4>
+                <span>Co-Founder</span>
+                <!-- <p>Quisquam facilis cum velit laborum corrupti</p> -->
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -111,7 +111,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 mt-4">
+          <!-- <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="{% static 'assets/img/team/team-4.jpg' %}" class="img-fluid" alt=""></div>
               <div class="member-info">
@@ -126,7 +126,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
