--- a/leighfisher_app/static/assets/css/style.css
+++ b/leighfisher_app/static/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 a:hover {
@@ -45,13 +45,13 @@ h1, h2, h3, h4, h5, h6 {
   width: 40px;
   height: 40px;
   border-radius: 4px;
-  background: #d9232d;
+  background: #ff9c07;
   color: #fff;
   transition: all 0.4s;
 }
 
 .back-to-top i:hover {
-  background: #e1444d;
+  background: #0a237d;
   color: #fff;
 }
 
@@ -101,6 +101,29 @@ h1, h2, h3, h4, h5, h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Desktop Navigation */
+
+.navbar-img{
+  width: 220px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .navbar-img {
+    width: 140px;
+  }
+}
+
+@media only screen and (max-width: 748px) {
+  .navbar-img {
+    width: 180px;
+  }
+}
+
+@media only screen and (max-width: 748px) {
+  #navbar-logo {
+    padding-top: 0;
+  }
+}
+
 .nav-menu ul {
   margin: 0;
   padding: 0;
@@ -128,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .nav-menu .drop-down ul {
@@ -165,7 +188,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .nav-menu .drop-down > a:after {
@@ -211,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Get Startet Button */
 .get-started-btn {
   margin-left: 25px;
-  background: #d9232d;
+  background: #ff9c07;
   color: #fff;
   border-radius: 4px;
   padding: 8px 30px 9px 30px;
@@ -222,7 +245,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .get-started-btn:hover {
-  background: #e1444d;
+  background: #0a237d;
   color: #fff;
 }
 
@@ -285,7 +308,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #d9232d;
+  color: #ff9c07;
   text-decoration: none;
 }
 
@@ -468,7 +491,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #d9232d;
+  background: #ff9c07;
 }
 
 #hero .btn-get-started {
@@ -484,11 +507,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  background: #d9232d;
+  background: #ff9c07;
 }
 
 #hero .btn-get-started:hover {
-  background: #df3740;
+  background: #0a237d;
 }
 
 @media (max-width: 992px) {
@@ -656,7 +679,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .about .content p:last-child {
@@ -703,7 +726,7 @@ section {
 
 .services .icon-box i {
   float: left;
-  color: #d9232d;
+  color: #ff9c07;
   font-size: 40px;
 }
 
@@ -726,7 +749,7 @@ section {
 }
 
 .services .icon-box:hover h4 a {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 /*--------------------------------------------------------------
@@ -759,7 +782,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #d9232d;
+  background: #ff9c07;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -926,7 +949,7 @@ section {
   border-radius: 4px;
   width: 32px;
   height: 32px;
-  background: #8795a4;
+  background: #0a237d;
 }
 
 .team .member .social a i {
@@ -936,7 +959,7 @@ section {
 }
 
 .team .member .social a:hover {
-  background: #d9232d;
+  background: #ff9c07;
 }
 
 .team .member .social a + a {
@@ -1001,12 +1024,12 @@ section {
 }
 
 .features .nav-link:hover {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .features .nav-link.active {
-  color: #d9232d;
-  border-color: #d9232d;
+  color: #ff9c07;
+  border-color: #ff9c07;
 }
 
 .features .tab-pane.active {
@@ -1036,7 +1059,7 @@ section {
   }
   .features .nav-link.active {
     color: #fff;
-    background: #d9232d;
+    background: #ff9c07;
   }
 }
 
@@ -1065,7 +1088,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #d9232d;
+  color: #ff9c07;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1097,7 +1120,7 @@ section {
 }
 
 .pricing ul i {
-  color: #d9232d;
+  color: #ff9c07;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1115,7 +1138,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #d9232d;
+  background: #ff9c07;
   display: inline-block;
   padding: 8px 35px 9px 35px;
   border-radius: 4px;
@@ -1129,12 +1152,12 @@ section {
 }
 
 .pricing .btn-buy:hover {
-  background: #e1444d;
+  background: #0a237d;
 }
 
 .pricing .featured h3 {
   color: #fff;
-  background: #d9232d;
+  background: #ff9c07;
 }
 
 .pricing .advanced {
@@ -1146,7 +1169,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #d9232d;
+  background: #ff9c07;
   color: #fff;
 }
 
@@ -1349,7 +1372,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #d9232d;
+  border-color: #ff9c07;
 }
 
 .contact .php-email-form input {
@@ -1361,7 +1384,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #d9232d;
+  background: #ff9c07;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1415,7 +1438,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #d9232d !important;
+  background-color: #ff9c07 !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1483,7 +1506,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .blog .entry .entry-meta {
@@ -1527,7 +1550,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #d9232d;
+  background: #ff9c07;
   color: #fff;
   padding: 6px 20px 7px;
   transition: 0.3s;
@@ -1536,7 +1559,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #e1444d;
+  background: #0a237d;
 }
 
 .blog .entry .entry-content h3 {
@@ -1607,7 +1630,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1717,7 +1740,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1790,7 +1813,7 @@ section {
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
-  background-color: #d9232d;
+  background-color: #ff9c07;
 }
 
 .blog .blog-pagination {
@@ -1820,8 +1843,8 @@ section {
 }
 
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #d9232d;
-  border: 1px solid #d9232d;
+  background: #ff9c07;
+  border: 1px solid #ff9c07;
 }
 
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
@@ -1906,7 +1929,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .blog .sidebar .categories ul a span {
@@ -1936,7 +1959,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #d9232d;
+  color: #ff9c07;
 }
 
 .blog .sidebar .recent-posts time {
@@ -1973,8 +1996,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #d9232d;
-  background: #d9232d;
+  border: 1px solid #ff9c07;
+  background: #ff9c07;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2034,7 +2057,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #d9232d;
+  background: #ff9c07;
   color: #fff;
   text-decoration: none;
 }
@@ -2108,14 +2131,14 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px 2px 20px;
-  background: #d9232d;
+  background: #ff9c07;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
 }
 
 #footer .footer-top .footer-newsletter form input[type="submit"]:hover {
-  background: #df3740;
+  background: #0a237d;
 }
 
 #footer .copyright {
