--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
-{% load i18n %}
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sailor Bootstrap Template</title>
+  <title>Leighfisher Consultancy Pvt. Ltd.</title>
 
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+  <link href="{% static 'assets/img/logo.JPEG' %}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -43,7 +42,11 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo"><a href="index.html">Sailor</a></h1>
+      <!-- <a id="navbar-logo" class="navbar-brand" href="{% url 'index' %}">
+        <img class="navbar-img" src="{% static 'assets/img/logo.JPEG' %}" alt="" class="img-fluid"></a> -->
+     <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/logo.JPEG' %}" alt="" class="img-fluid"></a>
+
+      <!-- <h1 class="logo"><a href="{% url 'index' %}">Leighfisher</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -73,7 +76,7 @@
           <li class="drop-down"><a href="#">Services</a>
             <ul>
               <li><a href="{% url 'about' %}">Trust Funding</a></li>
-              <li><a href="{% url 'about' %}">Realty</a></li>
+              <li><a href="{% url 'about' %}">Reality</a></li>
               <li><a href="{% url 'about' %}">Business/Projects Advisory</a></li>
               <li><a href="{% url 'about' %}">Startup Assistance</a></li>
               <li><a href="{% url 'about' %}">Engineering Services</a></li>
@@ -87,9 +90,9 @@
           </li>
 
           <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
-          <li><a href="{% url 'pricing' %}">Pricing</a></li>
-          <li><a href="{% url 'blog' %}">Blog</a></li>
-          <li><a href="{% url 'contact' %}">Contact</a></li>
+          <!-- <li><a href="{% url 'pricing' %}">Pricing</a></li> -->
+          <!-- <li><a href="{% url 'blog' %}">Blog</a></li> -->
+          <li><a href="{% url 'contact' %}">Contact Us</a></li>
 
         </ul>
 
@@ -113,14 +116,14 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Leighfisher Consultancy Pvt. Ltd.</h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
                 <strong>Phone:</strong> +1 5589 55488 55<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
-              <div class="social-links mt-3">
+              <div class="social-links mt-3 ">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -130,7 +133,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-4 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -141,25 +144,38 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-4 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Trust Funding</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Reality</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Business/Projects Advisory</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Startup Assistance</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Engineering Services</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Logistics</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Power Venture</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Tourism</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'team' %}">Constructions/Infra</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'testimonial' %}">Solar</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'testimonial' %}">International Trading</a></li>
+              </ul>
+              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -167,7 +183,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Sailor</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Leighfisher Consultancy Pvt. Ltd</span></strong>. All Rights Reserved
       </div>
 
     </div>
