index page changes

--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -98,7 +98,7 @@
 
       </nav><!-- .nav-menu -->
 
-      <a href="{% url 'index' %}" class="get-started-btn ml-auto">Get Started</a>
+      <a href="{% url 'index' %}" class="get-started-btn ml-auto">BECOME A CLIENT</a>
 
     </div>
   </header><!-- End Header -->
