--- a/leighfisher_app/static/assets/css/style.css
+++ b/leighfisher_app/static/assets/css/style.css
@@ -369,7 +369,8 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-color: rgba(63, 73, 83, 0.8);
+  background-image: url(assets/img/slide/slide-1.jpg);
+  background-color: #0faf00;
   overflow: hidden;
   position: relative;
 }
