--- Auto-Git Commit ---

--- a/leighfisher_app/templates/index.html
+++ b/leighfisher_app/templates/index.html
@@ -16,7 +16,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 lang="la" class="animate__animated animate__fadeInDown">Welcome to <span>Leighfisher</span></h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp">LeighFisher is a global management consulting firm that combines deep market-specific knowledge with specialized expertise in business advisory, startups assistance, international trading, logistics and trust funding. We focus on providing impactful and noticeable consulting services.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -27,7 +27,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">How We Help</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp"> We aim to be thought leaders in all markets we serve, and actively invest in industry. Our approach is to apply deep, market-specific expertise, combined with the best practices of our global client base, to solve our clients’ challenges and problems. We develop long-term relationships as trusted advisors to our clients, and work with them to deliver sustainable outcomes and lasting value.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
@@ -38,7 +38,7 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Creating adaptive strategies</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
+              <p class="animate__animated animate__fadeInUp">We care about your business and we are Knowledgeable about making your benefits higher.  We have been lucky to have the opportunity to service clients - from startups to not-for-profit - to enterprise companies. We have grown immensely!</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
             </div>
           </div>
