--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -75,17 +75,17 @@
 
           <li class="drop-down"><a href="#">Services</a>
             <ul>
-              <li><a href="{% url 'about' %}">Trust Funding</a></li>
-              <li><a href="{% url 'about' %}">Reality</a></li>
-              <li><a href="{% url 'about' %}">Business/Projects Advisory</a></li>
-              <li><a href="{% url 'about' %}">Startup Assistance</a></li>
-              <li><a href="{% url 'about' %}">Engineering Services</a></li>
-              <li><a href="{% url 'about' %}">Logistics</a></li>
-              <li><a href="{% url 'about' %}">Power Venture</a></li>
-              <li><a href="{% url 'about' %}">Tourism</a></li>
-              <li><a href="{% url 'team' %}">Constructions/Infra</a></li>
-              <li><a href="{% url 'testimonial' %}">Solar</a></li>
-              <li><a href="{% url 'testimonial' %}">International Trading</a></li>
+              <li><a href="{% url 'trust funding' %}">Trust Funding</a></li>
+              <li><a href="{% url 'Reality' %}">Reality</a></li>
+              <li><a href="{% url 'Business_adv' %}">Business/Projects Advisory</a></li>
+              <li><a href="{% url 'Startups_ass' %}">Startup Assistance</a></li>
+              <li><a href="{% url 'Engg_serv' %}">Engineering Services</a></li>
+              <li><a href="{% url 'Logistics' %}">Logistics</a></li>
+              <li><a href="{% url 'Power Venture' %}">Power Venture</a></li>
+              <li><a href="{% url 'Tourism' %}">Tourism</a></li>
+              <li><a href="{% url 'Con_infra' %}">Constructions/Infra</a></li>
+              <li><a href="{% url 'Solar' %}">Solar</a></li>
+              <li><a href="{% url 'InternationalTrading' %}">International Trading</a></li>
             </ul>
           </li>
 
