--- Auto-Git Commit ---

--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -75,13 +75,13 @@
 
           <li class="drop-down"><a href="#">Services</a>
             <ul>
-              <li><a href="{% url 'trust funding' %}">Trust Funding</a></li>
+              <li><a href="{% url 'trust_funding' %}">Trust Funding</a></li>
               <li><a href="{% url 'Reality' %}">Reality</a></li>
               <li><a href="{% url 'Business_adv' %}">Business/Projects Advisory</a></li>
               <li><a href="{% url 'Startups_ass' %}">Startup Assistance</a></li>
               <li><a href="{% url 'Engg_serv' %}">Engineering Services</a></li>
               <li><a href="{% url 'Logistics' %}">Logistics</a></li>
-              <li><a href="{% url 'Power Venture' %}">Power Venture</a></li>
+              <li><a href="{% url 'Power_Venture' %}">Power Venture</a></li>
               <li><a href="{% url 'Tourism' %}">Tourism</a></li>
               <li><a href="{% url 'Con_infra' %}">Constructions/Infra</a></li>
               <li><a href="{% url 'Solar' %}">Solar</a></li>
