--- Auto-Git Commit ---

--- a/leighfisher_app/templates/trust funding.html
+++ b/leighfisher_app/templates/trust funding.html
@@ -9,7 +9,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>About</h2>
+          <h2>Trust Funding</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>About</li>
@@ -25,10 +25,12 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>What is trust Funding? </h2>
+            <h3>Trust funds are designed to allow a person's money to continue to be useful well after they pass away. You can place cash, stock, real estate, or other valuable assets in your trust.
+A traditional irrevocable trust will likely cost a minimum of a few thousand dollars and could cost much more.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
+          <h3><b>What we offer!!</h3>
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
