--- Auto-Git Commit ---

--- a/leighfisher_app/templates/Reality.html
+++ b/leighfisher_app/templates/Reality.html
@@ -9,7 +9,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Reality</h2>
+          <h2><b>Realty<b></h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>About</li>
@@ -25,23 +25,20 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>What is Realty Services ?</h2>
+            <h3>A Real Estate Consultant is a professional who helps a client find the perfect property of his choice. Realty Consultancy offer valuable services and play an essential role in the real estate industry.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Realty Consultants have an in-depth working knowledge of the real estate industry and hence can provide the best advice to a customer looking for a commercial or residential property. We also guide a client through the whole process of purchase, monetary settlement, legal formalities and construction formalities of a property.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i> To provide customized real estate solutions based on every requirement by using best practices</li>
+              <li><i class="ri-check-double-line"></i> To offer the highest standards in the Realty sector for service, transparency in dealings, and market intelligence.</li>
+              <li><i class="ri-check-double-line"></i> To provide optimum customer satisfaction.To be the industry leader, as the first homegrown Property Consulting Company</li>
             </ul>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Meeting new customers, understanding their requirements and answering all customer queries. Bringing new and potential clients on board.
             </p>
           </div>
         </div>
@@ -54,8 +51,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Our Hardworking Team</p>
+          <h2>Services</h2>
+          <p>Realty</p>
         </div>
 
         <div class="row">
