--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -76,7 +76,7 @@
           <li class="drop-down"><a href="#">Services</a>
             <ul>
               <li><a href="{% url 'trust_funding' %}">Trust Funding</a></li>
-              <li><a href="{% url 'Reality' %}">Reality</a></li>
+              <li><a href="{% url 'Reality' %}">Realty</a></li>
               <li><a href="{% url 'Business_adv' %}">Business/Projects Advisory</a></li>
               <li><a href="{% url 'Startups_ass' %}">Startup Assistance</a></li>
               <li><a href="{% url 'Engg_serv' %}">Engineering Services</a></li>
