Services pages added

--- a/leighfisher_app/templates/Business_adv.html
+++ b/leighfisher_app/templates/Business_adv.html
@@ -29,19 +29,18 @@
             <h3> Business Advisors are independent and experienced experts, able to offer hands on, practical help, advice and support in specific business areas that will help make a difference to business success.Business advisory services tackle all aspects of business from managing finances, marketing your product or service better and more widely, embarking on research and development activities, to improving your operations.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+            <p>Our Business Advisory team develops and offers tailored, innovative and comprehensive solutions for specific client
+business needs that may not require the expression of opinions based on professional standards.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>We help companies overcome challenges, increase revenue or grow.</li>
+              <li><i class="ri-check-double-line"></i>We provide management consulting to help organizations improve their performance and efficiency. These professionals analyze businesses and create solutions while also helping companies meet their goals.</li>
+              <li><i class="ri-check-double-line"></i>Our experienced practitioners have extensive business knowledge and compliance, along with access to a global network of industry specialists.</li>
             </ul>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Our team of professionals serves
+companies throughout the business lifecycle and help them to emerge stronger and smarter by delivering an overall
+distinctive client experience through tailored service offerings and resources. 
             </p>
           </div>
         </div>
