--- a/leighfisher_app/templates/Startups_ass.html
+++ b/leighfisher_app/templates/Startups_ass.html
@@ -25,14 +25,12 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Startup assisting</h2>
+            <h3>Our offerings have evolved to keep with the market and the marketer's needs from an agency. Our methods have evolved to ensure that we have better flexibility and tighter monitoring in order to create stronger offerings and solutions.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              We offers and provide a wide assortment of business startup consulting services for different organizational sectors in all around the world. The offering covers up everything including financial strategy, risk management, and organisational setups. We focus on supporting you in every step while serving you with the service of your requirements. Even we also offer you a complete service package to serve you before, during, and after the service you require.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
