--- Auto-Git Commit ---

--- a/leighfisher_app/templates/Logistics.html
+++ b/leighfisher_app/templates/Logistics.html
@@ -25,19 +25,17 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>What is Logistics Consultancy ?</h2>
+            <h3>The Logistics Network is what links manufacturers, suppliers, wholesalers, retailers and consumers; and is therefore a key component within the Supply Chain. Transport, warehouse and distribution centre operations are what link manufacturers to end consumers (directly or in-directly). Dependent upon a strategic planning process, the logistics network within supply chains relies heavily upon businesses taking a holistic perspective at the heart of planning their supply chain processes.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              he cutting edge of innovation in shipment of products is Supply Chain Solutions often in response to market changes or changes in your business plans. You can save cost and time by analysing and restructuring your processes for transport, delivery and warehousing of your products.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>We can provide solutions customised for your requirements and set standards to enhance your supply chain efficiency.</li>
+              <li><i class="ri-check-double-line"></i>Our Logistics Consultancy team has in-depth knowledge and experience in building and executing supply chain solutions for multiple industries.</li>
+              <li><i class="ri-check-double-line"></i>We value each of our client’s unique needs and preferences and help them by identifying the right talent basis their requirements in the changing business landscape.</li>
             </ul>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
