--- a/leighfisher_app/templates/Startups_ass.html
+++ b/leighfisher_app/templates/Startups_ass.html
@@ -30,16 +30,14 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              We offers and provide a wide assortment of business startup consulting services for different organizational sectors in all around the world. The offering covers up everything including financial strategy, risk management, and organisational setups. We focus on supporting you in every step while serving you with the service of your requirements. Even we also offer you a complete service package to serve you before, during, and after the service you require.
+              We offer and provide a wide assortment of business startup consulting services for different organizational sectors in all around the world. The offering covers up everything including financial strategy, risk management, and organisational setups. We focus on supporting you in every step while serving you with the service of your requirements. We also offer you a complete service package to serve you before, during, and after the service you require.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i> We provide personalized service to each one of our clients and treat them as our Partners. The nature and scope of the services are determined differently as per each clients’ requirement.</li>
+              <li><i class="ri-check-double-line"></i>Comprised of experienced business attorneys, marketing experts, business advisors </li>
+              <li><i class="ri-check-double-line"></i>We work as the outsourced in-house counsel, business advisors and marketing strategists for new businesses and developing organizations.</li>
             </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="font-italic">Our team of professionals will work with you to understand the specific issues and challenges you face and help you plan your strategies.
             </p>
           </div>
         </div>
@@ -52,8 +50,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <p>Our Hardworking Team</p>
+          <h2>Services</h2>
+          <p>Startups Assistance</p>
         </div>
 
         <div class="row">
