--- Auto-Git Commit ---

--- a/leighfisher_app/templates/Logistics.html
+++ b/leighfisher_app/templates/Logistics.html
@@ -30,16 +30,14 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              he cutting edge of innovation in shipment of products is Supply Chain Solutions often in response to market changes or changes in your business plans. You can save cost and time by analysing and restructuring your processes for transport, delivery and warehousing of your products.
+              The cutting edge of innovation in shipment of products is Supply Chain Solutions often in response to market changes or changes in your business plans. You can save cost and time by analysing and restructuring your processes for transport, delivery and warehousing of your products.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>We can provide solutions customised for your requirements and set standards to enhance your supply chain efficiency.</li>
               <li><i class="ri-check-double-line"></i>Our Logistics Consultancy team has in-depth knowledge and experience in building and executing supply chain solutions for multiple industries.</li>
               <li><i class="ri-check-double-line"></i>We value each of our client’s unique needs and preferences and help them by identifying the right talent basis their requirements in the changing business landscape.</li>
             </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="font-italic">Our professionals hold expertise in offering Logistics Consultancy which includes solutions to problems like export, import, excise, customs, benefits and the overall procedures. By giving access to consolidated knowledge, specialization and resources, we have become one stop solution for our global clients. 
             </p>
           </div>
         </div>
