--- a/leighfisher_app/templates/Tourism.html
+++ b/leighfisher_app/templates/Tourism.html
@@ -25,23 +25,20 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>Why Tourism ?</h2>
+            <h3>Tourism Consultancy is the leading specialist from India, offering travel and tourism marketing and consultancy. We advise on tourism, leisure and hospitality, delivered by our experienced team of industry and communications professionals.
+We believe that the strength of a marketing and communication strategy lies in its alignment with the business strategy.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+            <p>LeighFisher is the leading specialist from India, offering travel and tourism Marketing and consultancy to attract high revenue and continuous business. We advise on tourism, leisure and hospitality that is delivered by our experienced team of industry and communications professionals. Our consultants are experienced destination marketers and have been in directive positions with budget responsibilities. They possess the skills, to create a thorough marketing mix and our hands-on and goal orientated approach, ensures satisfactory results.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>To help our clients create successful, sustainable tourism destinations and memorable experiences for a worldwide audience.</li>
+              <li><i class="ri-check-double-line"></i>Supporting poverty reduction strategies through tourism development by strengthening community participation and benefit sharing
+</li>
+              <li><i class="ri-check-double-line"></i>We focus on the development of growing tourism market and product trends</li>
             </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="font-italic">Our team offers a depth of experience in the tourism industry both regionally and internationally. The team has in-depth understanding of India and its cultural nuances as well as international experience.
             </p>
           </div>
         </div>
