Services Content added

--- a/leighfisher_app/templates/InternationalTrading.html
+++ b/leighfisher_app/templates/InternationalTrading.html
@@ -25,23 +25,18 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>What is International Trading ?</h2>
+            <h3>International trade allows countries to expand their markets and access goods and services that otherwise may not have been available domestically. As a result of international trade, the market is more competitive. This ultimately results in more competitive pricing and brings a cheaper product home to the consumer.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+            <p>We provide clients with customized assessments regarding complex compliance and administrative issues facing global companies. The result is often a competitive trade advantage for our customers due to the ability to quickly adapt to new requirements imposed by governmental authorities.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>Trading globally gives consumers and countries the opportunity to be exposed to goods and services not available in their own countries, or which would be more expensive domestically.</li>
+              <li><i class="ri-check-double-line"></i>We work closely with government agencies to keep up-to-date on any changes or amendments to trade regulations, so we can keep our clients in the know.</li>
+              <li><i class="ri-check-double-line"></i>We help you design your business processes so that your company can adapt to changing regulations and tariffs with ease. In a rapidly evolving international trade landscape, we can position your business for success.</li>
             </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p class="font-italic">Commitment and continuous support. Dedication and client staisfaction
             </p>
           </div>
         </div>
