--- a/leighfisher_app/templates/Con_infra.html
+++ b/leighfisher_app/templates/Con_infra.html
@@ -25,7 +25,7 @@
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Why Us ?</h2>
+            <h2>Construction </h2>
             <h3>Providing expertise at an early
 stage to ensure construction
 projects are successful.
@@ -35,6 +35,7 @@ approach and methodology that allows us to tailor
 services to individual client requirements.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
+          <h3>What we Offer ?</h3>
             <p>We provide support in selecting and placing
 construction contracts. Plus, also help decide the
 appropriate commercial arrangements, contractor
